--- a/index_final.html
+++ b/index_final.html
@@ -1,8 +1,3 @@
-<!--
-  Tasks for people are inside comment blocks
-  Right next to the change desired!
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +14,7 @@
      -->
     <section>
         <h1>
-            Let's Make a Cake!
+            Let's Make a Cake!! 🎂
         </h1>
 
         <!--
@@ -29,6 +24,8 @@
         <p>
             It's going to be a <em>piece</em> of cake!
         </p>
+
+        <hr />
 
         <h2>Ingredients</h2>
 
@@ -73,8 +70,6 @@
         correctly! Help!
        -->
         <p class="firewrks">🎆🎆🎆🎆</p>
-
-        <!-- This brings us to our segway into CSS... -->
     </section>
 </body>
 
