--- a/index10.html
+++ b/index10.html
@@ -47,9 +47,31 @@
 
         <p>Very healthy! I swear!</p>
 
-        <img src="cake.png">
+        <!--
+            What's better than text...pictures!
 
-        <p class="fireworks">🎆🎆🎆🎆</p>
+            We want to include a picture of cake on our page!
+
+            We have a file named 'cake.png' that we want to include on this page.
+
+            HTML has a tag named...img that lets us include images on the page.
+
+            the <img> tag is also a tag that has no content.
+
+            But now we're using a new feature of tags....a thing called attributes.
+
+            It's a way for us to tell the tag how to behave.
+
+            In this case we want to tell the image tag where the cake lives
+
+            We do that via the src attribute.
+
+            Can you have this point to our cake.png image?
+
+            Answer: put in "cake.png"
+         -->
+
+        <img src="">
     </section>
 </body>
 
