--- a/index11.html
+++ b/index11.html
@@ -49,7 +49,21 @@
 
         <img src="cake.png">
 
-        <p class="fireworks">🎆🎆🎆🎆</p>
+        <!--
+        Attributes exist on every HTML tag!
+
+        Here we're learning another one called class.
+
+        It's how we tell HTML what styles to use for our tags.
+
+        In this case I wanted to show my fireworks as nice and big however
+        I have a bug in my code!
+
+        Help me!
+
+        Answer: fix the typo
+       -->
+        <p class="firewrks">🎆🎆🎆🎆</p>
     </section>
 </body>
 
