--- a/index8.html
+++ b/index8.html
@@ -27,7 +27,15 @@
             <li>🧈</li>
         </ul>
 
-        <h2>Directions</h2>
+        <!--
+        Whoops! I made this section heading too small!
+        Help me make it the same size as my Ingredients section!
+
+        Answer: change h3 to h2
+
+        Discussion: many types of headings. HTML supports 5 different headings.
+       -->
+        <h3>Directions</h3>
 
         <ol>
             <li>
@@ -42,14 +50,6 @@
             </li>
             <li>Enjoy!</li>
         </ol>
-
-        <h5>Nutritional information</h5>
-
-        <p>Very healthy! I swear!</p>
-
-        <img src="cake.png">
-
-        <p class="fireworks">🎆🎆🎆🎆</p>
     </section>
 </body>
 
