--- a/index9.html
+++ b/index9.html
@@ -43,13 +43,17 @@
             <li>Enjoy!</li>
         </ol>
 
-        <h5>Nutritional information</h5>
+        <!--
+            We need to include some nutrition information on this page.
 
-        <p>Very healthy! I swear!</p>
+            Can you make a new section like we have above?
 
-        <img src="cake.png">
+            However we don't want to bring attention to it.
 
-        <p class="fireworks">🎆🎆🎆🎆</p>
+            How can we make it smaller then the other ones?
+
+            Answer: <h3> and <p> tag
+         -->
     </section>
 </body>
 
