flesh out css section

--- a/css/index_final.html
+++ b/css/index_final.html
@@ -20,10 +20,10 @@
 
         <h2>Ingredients</h2>
 
-        <ul>
+        <ul class="prettyLayout">
             <li>🍓</li>
             <li>🥛</li>
-            <li>🥚</li>
+            <li class="scared">🥚</li>
             <li>🧈</li>
         </ul>
 
@@ -47,7 +47,7 @@
 
         <p>Very healthy! I swear!</p>
 
-        <img src="cake.png">
+        <img src="cake.png" class="center excited">
 
         <p class="fireworks">🎆🎆🎆🎆</p>
     </section>
