--- a/html/index11.html
+++ b/html/index11.html
@@ -52,7 +52,7 @@
         <!--
         Attributes exist on every HTML tag!
 
-        Here we're learning another one called class.
+        Here we're learning another one called class. It contains class names.
 
         It's how we tell HTML what styles to use for our tags.
 
