--- a/html/index10.html
+++ b/html/index10.html
@@ -52,7 +52,7 @@
 
             We want to include a picture of cake on our page!
 
-            We have a file named 'cake.png' that we want to include on this page.
+            We have a file named 'cake.svg' that we want to include on this page.
 
             HTML has a tag named...img that lets us include images on the page.
 
