--- a/html/index11.html
+++ b/html/index11.html
@@ -47,7 +47,7 @@
 
         <p>Very healthy! I swear!</p>
 
-        <img src="cake.png">
+        <img src="cake.svg">
 
         <!--
         Attributes exist on every HTML tag!
