--- a/html/index7.html
+++ b/html/index7.html
@@ -31,9 +31,9 @@
         Answer: emojis
        -->
         <ul>
-            <li>flour</li>
-            <li>sugar</li>
-            <li>eggs</li>
+            <li>strawberry</li>
+            <li>milk</li>
+            <li>egg</li>
             <li>butter</li>
         </ul>
     </section>
