gt good start and final version of css

--- a/css/index_start.html
+++ b/css/index_start.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Cake Class</title>
-    <link rel="stylesheet" href="index_final.css" />
+    <link rel="stylesheet" href="index_start.css" />
 </head>
 
 <body>
@@ -20,10 +20,10 @@
 
         <h2>Ingredients</h2>
 
-        <ul class="prettyLayout">
+        <ul>
             <li>🍓</li>
             <li>🥛</li>
-            <li class="scared">🥚</li>
+            <li>🥚</li>
             <li>🧈</li>
         </ul>
 
@@ -47,7 +47,7 @@
 
         <p>Very healthy! I swear!</p>
 
-        <img src="cake.svg" class="center excited">
+        <img src="cake.svg">
 
         <p class="fireworks">🎆🎆🎆🎆</p>
     </section>
