--- a/html/index_final.html
+++ b/html/index_final.html
@@ -47,7 +47,7 @@
 
         <p>Very healthy! I swear!</p>
 
-        <img src="cake.png">
+        <img src="cake.svg">
 
         <p class="fireworks">🎆🎆🎆🎆</p>
     </section>
